test/parsing/errors/emptyEnum.compopts
--detailed-errors # emptyEnum-detailed.good
--no-detailed-errors # emptyEnum-brief.good
